<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etFname"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:background="@color/white"
        android:hint="@string/fName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etLname"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:autofillHints="name"
        android:background="@color/white"
        android:hint="@string/lName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/bDate"
        android:layout_width="238dp"
        android:layout_height="59dp"
        android:layout_marginTop="144dp"
        android:text="@string/bDate"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvDob"
        android:layout_width="237dp"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:hint="@string/Dob"
        android:layout_marginTop="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDate" />

    <EditText
        android:id="@+id/etNcats"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="64dp"
        android:background="@color/white"
        android:hint="@string/nCats"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bSubmit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNdogs"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="64dp"
        android:background="@color/white"
        android:hint="@string/nDogs"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bSubmit"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginBottom="72dp"
        android:text="@string/submit"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bClear"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginBottom="80dp"
        android:text="@string/clear"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>